force-app/main/default/objects/CampaignMember/fields/Best_Sequence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Best_Sequence_Owner__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Best_Sequence_Owner__c ,
 Contact.Best_Sequence_Owner__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best Sequence Owner</label>
    <type>Text</type>
</CustomField>