force-app/main/default/objects/CampaignMember/fields/Best_X_Factor__c.field-meta.xml
<CustomField>
    <fullName>Best_X_Factor__c</fullName>
    <description>Inherit the Best X-Factor value from the lead or contact.</description>
    <formula>if(isblank(ContactId ),
text(Lead.Best_X_Factor__c) ,
text(Contact.Best_X_Factor__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best X-Factor</label>
    <type>Text</type>
</CustomField>