force-app/main/default/objects/CampaignMember/fields/Best_X_Factor_Date__c.field-meta.xml
<CustomField>
    <fullName>Best_X_Factor_Date__c</fullName>
    <formula>if(isblank(ContactId ),
Lead.Best_X_Factor_Date__c ,
Contact.Best_X_Factor_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best X-Factor Date</label>
    <type>Date</type>
</CustomField>