force-app/main/default/objects/CampaignMember/fields/Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Name__c</fullName>
    <formula>if(isblank(ContactId ),
 Lead.Outreach_Current_Sequence_Name__c ,
 Contact.Outreach_Current_Sequence_Name__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Sequence Name</label>
    <type>Text</type>
</CustomField>