force-app/main/default/objects/CampaignMember/fields/Date_1_Working__c.field-meta.xml
<CustomField>
    <fullName>Date_1_Working__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Date_1_Working__c ,
 Contact.StatusDate_1_Working__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 1 - Working</label>
    <type>Date</type>
</CustomField>