force-app/main/default/objects/CampaignMember/fields/Date_2_Engaging__c.field-meta.xml
<CustomField>
    <fullName>Date_2_Engaging__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Date_2_Engaging__c  ,
 Contact.StatusDate_2_Engaging__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 2 - Engaging</label>
    <type>Date</type>
</CustomField>