force-app/main/default/objects/CampaignMember/fields/Date_3_Meeting_Set__c.field-meta.xml
<CustomField>
    <fullName>Date_3_Meeting_Set__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Date_3_Meeting_Set__c  ,
 Contact.StatusDate_3_Meeting__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 3 - Meeting Set</label>
    <type>Date</type>
</CustomField>