force-app/main/default/objects/CampaignMember/fields/Date_4_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_4_Qualified__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Date_4_Qualified__c  ,
 Contact.StatusDate_4_Qualified__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 4 - Qualified</label>
    <type>Date</type>
</CustomField>