force-app/main/default/objects/CampaignMember/fields/Date_5_DQ__c.field-meta.xml
<CustomField>
    <fullName>Date_5_DQ__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Date_5_DQ__c  ,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 5 - DQ</label>
    <type>Date</type>
</CustomField>