force-app/main/default/objects/CampaignMember/fields/Date_6_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Date_6_Nurture__c</fullName>
    <formula>if(isblank(ContactId),
 Lead.Date_6_Nurture__c  ,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 6 - Nurture</label>
    <type>Date</type>
</CustomField>