force-app/main/default/objects/CampaignMember/fields/Date_Added_to_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Sequence__c</fullName>
    <formula>if( isblank(ContactId),
 Lead.Outreach_Date_Added_to_Sequence__c ,
 Contact.Outreach_Date_Added_to_Sequence__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Added to Sequence</label>
    <type>Date</type>
</CustomField>