force-app/main/default/objects/CampaignMember/fields/Fit_score_07_27_2025__c.field-meta.xml
<CustomField>
    <fullName>Fit_score_07_27_2025__c</fullName>
    <description>Fit score as calculated in HubSpot and passed to Salesforce</description>
    <formula>if(isblank(ContactId ),
Lead.Fit_score_07_27_2025__c ,
Contact.Fit_score_07_27_2025__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fit score (07/27/2025)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>