force-app/main/default/objects/CampaignMember/fields/Fit_Score_Agentic_DevOps_02_19_2026__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Agentic_DevOps_02_19_2026__c</fullName>
    <description>This is a distinct fit score calculation to take into account Agentic DevOps prospect ICP.</description>
    <formula>if(isblank(ContactId ),
Lead.Fit_Score_Agentic_DevOps_02_19_2026__c ,
Contact.Fit_Score_Agentic_DevOps_02_19_2026__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fit Score Agentic DevOps (02/19/2026)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>