force-app/main/default/objects/CampaignMember/fields/gclid__c.field-meta.xml
<CustomField>
    <fullName>gclid__c</fullName>
    <description>The Google Click ID parameter appended to a Google Ads conversion.</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>