force-app/main/default/objects/CampaignMember/fields/Handraiser_Date__c.field-meta.xml
<CustomField>
    <fullName>Handraiser_Date__c</fullName>
    <description>The date the Lead or Contact raise their hand to speak with Sales either by Requesting a Demo or Contact Us.</description>
    <label>Handraiser Date</label>
    <type>Date</type>
</CustomField>