force-app/main/default/objects/CampaignMember/fields/HubSpot_Score__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Score__c</fullName>
    <formula>if(isblank(ContactId ),
 Lead.HubSpot_Score__c ,
 Contact.HubSpot_Score__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HubSpot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>