force-app/main/default/objects/CampaignMember/fields/Intent_Score_2026__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_2026__c</fullName>
    <description>Inherit intent score to campaign member.</description>
    <formula>if(isblank(ContactId ),
Lead.Intent_Score_2026__c ,
Contact.Intent_Score_2026__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Score 2026</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>