force-app/main/default/objects/CampaignMember/fields/Lead_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Status__c</fullName>
    <formula>if(ISBLANK( ContactId ),
 text(Lead.Status) ,
&quot;Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Contact Status</label>
    <type>Text</type>
</CustomField>