force-app/main/default/objects/CampaignMember/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <formula>if(isblank(ContactId ),
Lead.Lead_Source_Detail__c,
Lead.Lead_Source_Detail__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Detail</label>
    <type>Text</type>
</CustomField>