force-app/main/default/objects/CampaignMember/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <formula>if(isblank(ContactId ),
 Lead.MQL_Date__c ,
 Contact.MQL_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>