force-app/main/default/objects/CampaignMember/fields/Persona_Score__c.field-meta.xml
<CustomField>
    <fullName>Persona_Score__c</fullName>
    <formula>Lead.persona_score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Persona Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>