force-app/main/default/objects/CampaignMember/fields/Tradeshow_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Notes__c</fullName>
    <description>Here you&apos;ll find notes on this Campaign Member&apos;s most recent interaction with Opsera at a Tradeshow.</description>
    <label>Tradeshow Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>