force-app/main/default/objects/CampaignMember/fields/Warmly_Last_Pages_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Warmly_Last_Pages_Viewed__c</fullName>
    <formula>if( isblank(ContactId),
 Lead.warmlylastpagesviewed__c ,
 Contact.warmlylastpagesviewed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warmly: Last Pages Viewed</label>
    <type>Text</type>
</CustomField>