force-app/main/default/objects/CampaignMember/fields/Warmly_Last_seen__c.field-meta.xml
<CustomField>
    <fullName>Warmly_Last_seen__c</fullName>
    <formula>if( isblank(ContactId),
 Lead.warmlylastseenat__c ,
 Contact.warmlylastseenat__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warmly: Last seen</label>
    <type>DateTime</type>
</CustomField>