force-app/main/default/objects/CampaignMember/fields/Warmly_Total_Pages_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Warmly_Total_Pages_Viewed__c</fullName>
    <formula>if( isblank(ContactId),
Lead.warmlytotalpagesviewed__c ,
Contact.warmlytotalpagesviewed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warmly: Total Pages Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>