force-app/main/default/objects/CampaignMember/fields/X_Factor__c.field-meta.xml
<CustomField>
    <fullName>X_Factor__c</fullName>
    <formula>if(isblank(ContactId ),
 text(Lead.X_Factor__c)  ,
 text(Contact.X_Factor__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X-Factor</label>
    <type>Text</type>
</CustomField>